syntax = "proto3";

import "google/protobuf/wrappers.proto";

package proto_plugin_sample;
option csharp_namespace = "Proto.Plugin";

// @base BaseSettings
message proto_db_connection_string_settings2 {
    string string_settings = 1;
}
// @base BaseSettings
message proto_generator_db_access_settings2 {
    bool is_access_param1 = 1;
    google.protobuf.BoolValue is_access_param2 = 2;
    string access_param3 = 3;
    google.protobuf.StringValue access_param4 = 4;
    bool is_generate_not_valid_code = 5;
}
